--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
 <body>
 
 <header>
-    <div class="header_div-nav">
-        <div class="img">
+    <div class="header_nav">
+        <div class="milenium">
             <div class="rectangle2"></div>
             <div class="rectangle3"></div>
             <div class="rectangle4"></div>
             <img class="Vector_0" src="Vector.svg" alt="">
         </div>
-    <div class="nav_div-desctop">
+    <div class="header_div-desctop">
     <a>Главная</a><a>Цены</a><a>Кейсы и отзывы</a><a>Контакты</a>
     </div>
     <div class="header_div-number">
@@ -52,7 +52,7 @@
     <div class="rectangle26"></div>
     <div class="rectangle27"></div>
     </div>
-    <div class="img">
+    <div class="milenium">
     <div class="rectangle2"></div>
     <div class="rectangle3"></div>
     <div class="rectangle4"></div>
@@ -64,7 +64,7 @@
 </div>
 </header>
 <main>
-    <div class="main_div-main">
+    <div class="main_div-header">
     <h1 class="h1_1">
     Разработка интернет-магазинов 
     </h1>
@@ -72,10 +72,10 @@
      на 1С Битрикс
     </h1> 
     </div>   
-    <img class="main_img-img" src="background.png">
-    <p class="p_first">Разработаем интернет-магазин за 30 дней с уникальным дизайном и продуманной структурой который <span class="colorful">выделит вас на фоне конкурентов</span></p>
-    <div class="rectangle10"><p class="p_second">Узнать стоимость</p></div>
-    <div class="div_main-div"><span class="span_main-first">Оставьте заявку и получите бесплатную консультацию от специалиста, полный расчет стоимости разработки и бонус:</span><span class="span_main-second">«15 сервисов которые покажут стратегию продвижения конкурентов, всё об их выдаче в поиске и не только»</span></div>
+    <img class="main_img-content" src="background.png">
+    <p class="main_p-first">Разработаем интернет-магазин за 30 дней с уникальным дизайном и продуманной структурой который <span class="colorful">выделит вас на фоне конкурентов</span></p>
+    <div class="rectangle10"><p class="main_p-second">Узнать стоимость</p></div>
+    <div class="div_main-consult"><span class="span_main-first">Оставьте заявку и получите бесплатную консультацию от специалиста, полный расчет стоимости разработки и бонус:</span><span class="span_main-second">«15 сервисов которые покажут стратегию продвижения конкурентов, всё об их выдаче в поиске и не только»</span></div>
 </main>
 </body>
 </html>
